2005-05-01  Ion Badulescu  <ionut@moisil.badula.org>

	* amd/nfs_subr.c: am_fh definition moved here from amd.h;
	restructured to better reflect its duality (old/new filehandles)
	(fh_to_mp3): fhh_gen is always used, even for new style f/h
	(mp_to_fh): ditto

	* amd/amd.h: moved am_fh definition to nfs_subr.c (which is the
	only place where it's used)

2005-04-30  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/host_macros.m4: use sw_vers on Apple machines to find
	out more appropriate OS name (macosx) and OS version (10.3.x) than
	uname(3) reports.

2005-04-29  Erez Zadok  <ezk@cs.sunysb.edu>

	* config.guess, config.sub, doc/texinfo.tex: updates from latest
	official GNU distributions.

	* m4/macros/host_macros.m4: for macosx, change architecture value
	from "Power Macintosh" to "powerpc".

	* libamu/util.c (xstrlcpy): format 'len' parameter as u_long, not
	int (it's a size_t).

2005-04-16  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd.conf.5, doc/am-utils.texi (normalize_slashes
	Parameter), scripts/amd.conf-sample: document new
	normalize_slashes global configuration parameter.

	* amd/opts.c (deslashify, normalize_slash): don't touch trailing
	slashes, even if multiples of them, if user said
	normalize_slashes=no in amd.conf.

	* amd/conf.c (gopt_normalize_slashes): new function to record if
	to normalize slashes or not.

	* amd/amd.h (CFM_NORMALIZE_SLASHES): new flag to decide if to
	normalize double-slashes or not ("yes" by default).

	* amd/autil.c (am_mounted): pass TRUE when calling mf_mounted.
	This is the parent mntfs which does the mf->mf_fo
	(am_opts type), and we're passing TRUE here to tell mf_mounted to
	actually free the am_opts.

	* amd/autil.c (mf_mounted): Be careful when calling free_ops and
	XFREE here.  Some pseudo file systems like nfsx call this
	function, even though it would be called by the lower-level amd
	file system functions.  nfsx needs to call this function because
	of the other actions it takes.  So we pass a boolean from the