@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: amfs_host.c,v 1.30 2005/04/07 05:50:38 ezk Exp $
+ * $Id: amfs_host.c,v 1.31 2005/05/02 00:27:47 ottavio Exp $
  *
  */
 
@@ -573,7 +573,15 @@ amfs_host_umount(am_node *am, mntfs *mf)
        * Keep track of errors
        */
       if (error) {
-	if (!xerror)
+	/*
+	 * If we have not already set xerror and error is not ENOENT,
+	 * then set xerror equal to error and log it.
+	 * 'xerror' is the return value for this function.
+	 *
+	 * We do not want to pass ENOENT as an error because if the
+	 * directory does not exists our work is done anyway. 
+	 */
+	if (!xerror && error != ENOENT) 
 	  xerror = error;
 	if (error != EBUSY) {
 	  errno = error;
